Fix <a> contrast
Ouugh I have bad headache 3:

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -75,6 +75,12 @@ article p, article ul, article ol {
 sup {
     font-size: 8px;
 }
+a {
+    color: #ADD8E6;
+}
+a:visited {
+    color: #CBC3E3;
+}
 
 /*Layout*/
 html,body {
